--- a/web/themes/opendoor/templates/block/block--primary-menu--plugin-id--search-form-block.html.twig
+++ b/web/themes/opendoor/templates/block/block--primary-menu--plugin-id--search-form-block.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Olivero's theme implementation for a search form block in the Primary Menu region.
+ * opendoor's theme implementation for a search form block in the Primary Menu region.
  *
  * Available variables:
  * - plugin_id: The ID of the block implementation.
