--- a/web/themes/opendoor/templates/block/block--search-form-block.html.twig
+++ b/web/themes/opendoor/templates/block/block--search-form-block.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Olivero's theme implementation for a search form block.
+ * opendoor's theme implementation for a search form block.
  *
  * Available variables:
  * - content: The content of this block.
