--- a/web/themes/opendoor/templates/block/block--system-menu-block.html.twig
+++ b/web/themes/opendoor/templates/block/block--system-menu-block.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Olivero's override for the main menu navigation block.
+ * opendoor's override for the main menu navigation block.
  *
  * Available variables:
  * - plugin_id: The ID of the block implementation.
