--- a/web/themes/opendoor/templates/content/page-title.html.twig
+++ b/web/themes/opendoor/templates/content/page-title.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Olivero's theme implementation for a page title.
+ * opendoor's theme implementation for a page title.
  *
  * Available variables:
  * - title_attributes: HTML attributes for the page title element.
