--- a/web/themes/opendoor/templates/field/field--node--field-tags.html.twig
+++ b/web/themes/opendoor/templates/field/field--node--field-tags.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Olivero theme override for tags field.
+ * opendoor theme override for tags field.
  *
  * Available variables:
  * - attributes: HTML attributes for the containing element.
@@ -37,7 +37,7 @@
   ]
 %}
 
-{{ attach_library('olivero/tags') }}
+{{ attach_library('opendoor/tags') }}
 <div{{ attributes.addClass(classes) }}>
   {% if not label_hidden %}
     <h3{{ title_attributes.addClass(title_classes) }}>{{ label }}</h3>
