--- a/web/themes/opendoor/templates/includes/get-started.html.twig
+++ b/web/themes/opendoor/templates/includes/get-started.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Olivero's theme Get Started section.
+ * opendoor's theme Get Started section.
  *
  * This section is enabled when no front page content has been populated.
  *
