--- a/web/themes/opendoor/templates/block/block--secondary-menu.html.twig
+++ b/web/themes/opendoor/templates/block/block--secondary-menu.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Olivero's override for the User Account Menu navigation block.
+ * opendoor's override for the User Account Menu navigation block.
  *
  * Available variables:
  * - plugin_id: The ID of the block implementation.
