--- a/web/themes/opendoor/templates/block/block--system-branding-block.html.twig
+++ b/web/themes/opendoor/templates/block/block--system-branding-block.html.twig
@@ -2,7 +2,7 @@
 {#
 /**
  * @file
- * Olivero's theme implementation for a branding block.
+ * opendoor's theme implementation for a branding block.
  *
  * Each branding element variable (logo, name, slogan) is only available if
  * enabled in the block configuration.
