--- a/web/themes/opendoor/templates/block/block.html.twig
+++ b/web/themes/opendoor/templates/block/block.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Olivero's implementation to display a block.
+ * opendoor's implementation to display a block.
  *
  * Available variables:
  * - layout: String that will determine the layout of the block.
