--- a/web/themes/opendoor/templates/content/node--teaser.html.twig
+++ b/web/themes/opendoor/templates/content/node--teaser.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Olivero's theme implementation to display a node teaser.
+ * opendoor's theme implementation to display a node teaser.
  *
  * Available variables:
  * - node: The node entity with limited access to object properties and methods.
@@ -72,7 +72,7 @@
 %}
 
 
-{% embed "olivero:teaser" with {
+{% embed "opendoor:teaser" with {
   attributes: attributes.addClass(classes),
   author_attributes,
   author_name,
