--- a/web/themes/opendoor/templates/field/field--comment-body.html.twig
+++ b/web/themes/opendoor/templates/field/field--comment-body.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Olivero's theme override for comment body field.
+ * opendoor's theme override for comment body field.
  *
  * Available variables:
  * - attributes: HTML attributes for the containing element.
