--- a/web/themes/opendoor/templates/layout/html.html.twig
+++ b/web/themes/opendoor/templates/layout/html.html.twig
@@ -19,7 +19,7 @@
  * - db_offline: A flag indicating if the database is offline.
  * - placeholder_token: The token for generating head, css, js and js-bottom
  *   placeholders.
- * - olivero_path: Returns the path to an Olivero theme.
+ * - opendoor_path: Returns the path to an opendoor theme.
  * - noscript_styles: <noscript> content.
  *
  * @see template_preprocess_html()
