--- a/web/themes/opendoor/templates/layout/region--content-above.html.twig
+++ b/web/themes/opendoor/templates/layout/region--content-above.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Olivero's theme override to display the content above region.
+ * opendoor's theme override to display the content above region.
  *
  * Available variables:
  * - content: The content for this region, typically blocks.
