--- a/web/themes/opendoor/templates/layout/region--content.html.twig
+++ b/web/themes/opendoor/templates/layout/region--content.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Olivero's theme override to display the content region.
+ * opendoor's theme override to display the content region.
  *
  * Available variables:
  * - content: The content for this region, typically blocks.
