--- a/web/themes/opendoor/templates/navigation/links.html.twig
+++ b/web/themes/opendoor/templates/navigation/links.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Olivero's theme override for a set of links.
+ * opendoor's theme override for a set of links.
  *
  * Available variables:
  * - attributes: Attributes for the UL containing the list of links.
