--- a/web/themes/opendoor/templates/navigation/menu--secondary-menu.html.twig
+++ b/web/themes/opendoor/templates/navigation/menu--secondary-menu.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Olivero's theme implementation for the menus in the secondary_menu region.
+ * opendoor's theme implementation for the menus in the secondary_menu region.
  *
  * Available variables:
  * - menu_name: The machine name of the menu.
@@ -20,7 +20,7 @@
  * @ingroup themeable
  */
 #}
-{{ attach_library('olivero/navigation-secondary') }}
+{{ attach_library('opendoor/navigation-secondary') }}
 
 {% import _self as menus %}
 
